syntax = "proto3";

service Alpaca {
  rpc GetState (GetStateRequest) returns (GetStateResponse) {}
  rpc StreamState (GetStateRequest) returns (stream GetStateResponse) {}
  rpc Prompt (PromptRequest) returns (stream PromptResponse) {}
}

enum AlpacaState {
  INIT = 0;
  READY = 1;
  RUNNING = 2;
}

message GetStateRequest {
  string id = 1;
}

message GetStateResponse {
  string id = 1;
  AlpacaState state = 2;
}

message PromptRequest {
  string id = 1;
  string prompt = 2;
}

message PromptResponse {
  string text = 1;
}